--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+* my first full fledged project using html and css .
+* this is basicaly a landing page of business firm or analytics provided lots of designing feature.
